--- a/index.html
+++ b/index.html
@@ -5,36 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <link rel="stylesheet" href="./css/style.css" />
-    <script src="./js/script.css" defer></script>
+    <script src="./js/script.js" defer></script>
   </head>
   <body>
     <div class="content">
       <div id="calculator">
-        <div id="calc-display"></div>
+        <span class="toggle-mode material-symbols-outlined">dark_mode</span>
+        <div id="calc-display">1+3</div>
         <div id="calc-buttons">
           <div id="numpad">
-            <button class="btn-padrao">7</button>
-            <button class="btn-padrao">8</button>
-            <button class="btn-padrao">9</button>
-            <button class="btn-padrao">4</button>
-            <button class="btn-padrao">5</button>
-            <button class="btn-padrao">6</button>
-            <button class="btn-padrao">1</button>
-            <button class="btn-padrao">2</button>
-            <button class="btn-padrao">3</button>
-            <button class="btn-duplo-horizontal">0</button>
-            <button class="btn-padrao">.</button>
+            <button class="btn-standard">7</button>
+            <button class="btn-standard">8</button>
+            <button class="btn-standard">9</button>
+            <button class="btn-standard">4</button>
+            <button class="btn-standard">5</button>
+            <button class="btn-standard">6</button>
+            <button class="btn-standard">1</button>
+            <button class="btn-standard">2</button>
+            <button class="btn-standard">3</button>
+            <button class="btn-large-horizontal">0</button>
+            <button class="btn-standard">.</button>
           </div>
           <div id="operations">
-            <button class="btn-padrao">/</button>
-            <button class="btn-padrao">*</button>
-            <button class="btn-padrao">-</button>
-            <button class="btn-padrao">+</button>
+            <button class="btn-standard">/</button>
+            <button class="btn-standard">*</button>
+            <button class="btn-standard">-</button>
+            <button class="btn-standard">+</button>
           </div>
           <div id="extras">
-            <button class="btn-duplo-vertical" id="btn-clear">C</button>
-            <button class="btn-duplo-vertical" id="btn-equals">=</button>
+            <button class="btn-large-vertical" id="btn-clear">C</button>
+            <button class="btn-large-vertical" id="btn-equals">=</button>
           </div>
         </div>
       </div>
